@@ -207,7 +207,7 @@ CDEFS += $(LUFA_OPTS)
 ADEFS  = -DF_CPU=$(F_CPU)
 ADEFS += -DF_USB=$(F_USB)UL
 ADEFS += -DBOARD=BOARD_$(BOARD)
-ADEFS += -DBOOT_START_ADDR=$(BOOT_START)UL
+ADEFS += -DBOOT_START_ADDR=$(BOOT_START)
 ADEFS += $(LUFA_OPTS)
 
 
